# FlashS

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: README.md  benchmark_openproblems_methods.py  run_all_benchmarks.py  verify_benchmark.py
docs/: methods.md
examples/: quickstart.ipynb
flashs/: __init__.py
flashs/core/: __init__.py  bandwidth.py  pvalue.py  result.py  rff.py  sketch.py
flashs/io/: __init__.py  anndata.py
flashs/model/: __init__.py  svg.py
flashs/pl/: __init__.py  _svg.py
flashs/preprocessing/: __init__.py  normalize.py
flashs/tl/: __init__.py  _svg.py
open_problems/: config.vsh.yaml  script.py
tests/: conftest.py
tests/integration/: test_flashs_smoke.py  test_flashs_statistical_small.py
tests/unit/: test_bandwidth.py  test_io_anndata.py  test_normalize.py  test_pl_svg.py  test_pvalue.py  test_result_contracts.py  test_rff_contracts.py  test_sketch_contracts.py  test_sum_z.py  test_svg_params.py  test_tl_svg.py
